2002-12-02  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* drivers/Makefile.am for AT branch: instead of using the
	  concatanation of all compiler flags for all dynamic drivers, apply
	  only those compiler flags that are appropriate to each dynamic
	  driver.  This makes a huge reduction in the command line when
	  gnome driver flags are involved, and probably saves significant
	  computer time as well when you avoid searching all those gnome
	  header directories for each dynamic driver.
	  
	* test/Makefile.am, etc for AT branch.  Bring test directory under
	  autotools control. Result is that plplot-test.sh runs in the
	  installed examples directory and gives identical results with the
	  MAIN branch (except in a few cases where there is version skew
	  between the examples since AT was branched from MAIN).

2002-12-01  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Finish (nearly) all the dynamic driver builds for AT. Checked that
	  gnome, png, xfig, ntk all worked.  Also, package require Plplotter
	  (which accesses the tkwin_drv.so shared object) also works, and
	  -dev tkwin works (although it simply returns the usual error
	  message about no widget being available since this is not a
	  stand-alone driver).  As far as I know, the only driver that still
	  has errors under AT is tk.

2002-11-30  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Finish AT libplplottcltk.so* build when itcl and tk are enabled.

	* bindings/tk for AT: build and install plserver and *.tcl, *.itk,
	  and palette (*.pal) files.

	* acinclude.m4 copied (again) from cf/aclocal.m4 for AT branch to
	  pick up all the autoconf 2.5.3 changes.

2002-11-29  Alan W. Irwin <irwin@beluga.phys.uvic.ca>

	* Finish AT tcl binding.  These are only small fairly
	  non-consequential refinements that I did while trying to debug the
	  extended search problem (which had a simple solution which I will
	  discuss on list).

	* Prepare for the AT change in bindings/tk and bindings/tk-x-plat 