@@ -19,7 +19,7 @@
 #along with the file; if not, write to the Free Software
 #Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 
-SUBDIRS = c++ f77 python tcl tk
+SUBDIRS = c++ f77 python tcl tk octave
 
 abovedatadir = ${prefix}/@DATA_DIR@/..
 
